--- a/css/style.css
+++ b/css/style.css
@@ -43,9 +43,9 @@ nav {
 .nav a {
     padding: 8px 16px;
     text-decoration: none;
-    color: #03416c;
-    margin-right: 30px;
-    font-size: 18px;
+    color: #747a7b;
+    margin-right: 24px;
+    font-size: 14px;
     border: 2px solid transparent;
 }
 .active, .nav a:hover {
@@ -79,7 +79,7 @@ nav {
 .row1 {
     display: flex;
     justify-content: space-between;
-    padding-bottom: 40px;
+    padding-bottom: 20px;
 }
 .col3 {
     width: 30%;
@@ -88,17 +88,17 @@ nav {
     width: 70%;
 }
 .pad-b {
-    line-height: 1.5;
+    line-height: 1.3;
 }
 /* search and category */
 .pad-s {
     padding: 8px 0;
 }
 .pad-b li {
-    padding-bottom: 8px;
+    padding-bottom: 6px;
 }
 .category h3 {
-    padding: 16px 0;
+    padding: 8px 0;
 }
 /* search */
 .search, .category {
@@ -110,8 +110,9 @@ nav {
     background-color: #f9fafb;
     border-radius: 10px;
 }
-.search-sym {
+.fa-magnifying-glass {
     color:#00a5ec;
+    padding: 6px;
 }
 .search-bar-input, .search-bar-input:focus, .search-bar-input:active {
     outline: none;
@@ -126,6 +127,7 @@ nav {
 }
 .category ul li {
     padding-left: 15px;
+    color: #747a7b;
 }
 /* items to be shop */
 .grid {
@@ -138,7 +140,7 @@ nav {
 }
 .shop-list {
     border: 2px solid #ededed;
-    width: 400px;
+    width: 380px;
     height: auto;
     min-height: 450px;
     border-radius: 16px;
@@ -148,7 +150,8 @@ nav {
     line-height: 1.5;
 }
 .shop-list p {
-    padding-bottom: 16px;
+    padding-bottom: 8px;
+    color: #747a7b;
 }
 .bg-c-item {
     background-color: #f9fafb;
@@ -156,12 +159,15 @@ nav {
     border-radius: 16px 16px 0 0;
 }
 .bg-c-item p {
-    font-size: 18px;
+    font-size: 16px;
     color: #00a5ec;
 }
 .shop-item {
     display: flex;
     justify-content: center;
+    align-items: center;
+    width: auto;
+    height: 216px;
 }
 .heart {
     display: flex;
@@ -174,15 +180,15 @@ nav {
 .button {
     display: flex;
     justify-content: space-around;
-    padding: 20px;
+    padding: 0 16px 8px 16px;
 }
-.button span {
+.button i {
     padding-left: 10px;
 }
 .btn-cart {
     color: white;
     background-color: #03416c;
-    font-size: 20px;
+    font-size: 16px;
     padding: 8px 16px;
     display: flex;
     align-items: center;
@@ -191,7 +197,7 @@ nav {
     cursor: pointer;
 }
 .add-cart {
-    font-size: 20px;
+    font-size: 16px;
     color: #00a5ec;
     padding: 8px 16px;
     background-color: #fff;
@@ -206,14 +212,12 @@ nav {
 .nxt-page a {
     color: black;
     text-decoration: none;
-    font-size: 20px;
-    font-weight: bold;
-    padding: 20px;
+    font-size: 16px;
+    padding: 16px;
     margin-left: 30px;
 }
 .nxt-page span {
-    font-size: 24px;
-    font-weight: bold;
+    font-size: 16px;
 }
 .active-page, .nxt-page a:hover {
     color: #fff !important;
@@ -223,49 +227,45 @@ nav {
 footer {
     background-color: #03416c;
     color: #fff;
-    font-size: 18px;
+    font-size: 16px;
 }
 .about-us, .leatest-post {
-    padding: 40px;
+    padding: 10px 20px;
     width: 35%;
 }
 
 /* About Us */
 .about-us {
-    line-height: 1.5;
+    line-height: 1.3;
 }
 .fa-brands {
     color:#fff;
-    margin-left: 20px;
+    margin-right: 20px;
 }
-.social-links {
-    padding: 20px 20px 20px 0;
-}
-
 .about-us p:nth-child(3) {
-    padding: 10px;
+    padding: 10px 0;
 }
 /* Quick links */
 .quick-link {
     width: 30%;
-    padding: 40px;
+    padding: 10px 20px;
 }
 .quick-link ul {
     list-style-type: none;
-    padding: 10px;
+    padding: 10px 0 0 0;
 }
 .quick-link ul li {
-    padding-bottom: 10px;
+    padding-bottom: 8px;
 }
 .quick-link ul li a {
     text-decoration: none;
     color: #fff;
-    line-height: 1.5;
+    line-height: 1.3;
 }
 /* leatest post */
 .leatest {
     display: flex;
-    padding: 20px 0;
+    padding: 10px 0;
 }
 .leatest-no {
     display: flex;
